--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 django = "*"
 pylint = "*"
 pillow = "*"
+pylint-django = "*"
+google-auth = "*"
+secure-smtplib = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
